tests/ui/lexer/unterminated_unicode_string.stderr
error: unterminated string
  --> $DIR/unterminated_unicode_string.sol:1:1
   |
LL | / unicode"
LL | |
LL | |
   | |________________________________^
   |

error: expected global item (pragma, import directive, contract, interface, library, struct, enum, constant, function, modifier, or error definition), found `<error>`
  --> $DIR/unterminated_unicode_string.sol:1:1
   |
LL | / unicode"
LL | |
LL | |
   | |________________________________^
   |
   = note: for a full list of valid global items, see <https://docs.soliditylang.org/en/latest/grammar.html#a4.SolidityParser.sourceUnit>

error: aborting due to 2 previous errors

