tests/ui/lexer/unterminated_unicode_string.sol
unicode"
//~^ ERROR: unterminated string
//~| ERROR: expected global item
